--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
   </div>
   <script type="module">
-    import sodium from 'https://cdn.jsdelivr.net/npm/libsodium-wrappers@0.7.13/dist/modules/libsodium-wrappers.js?v=3';
+    import sodium from 'https://cdn.skypack.dev/libsodium-wrappers@0.7.13';
     window.sodium = sodium;
     window.initApp();
   </script>
