Fix: use .mjs ESM build from jsdelivr

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
   </div>
   <script type="module">
-    import sodium from 'https://cdn.skypack.dev/libsodium-wrappers@0.7.13';
+    import sodium from 'https://cdn.jsdelivr.net/npm/libsodium-wrappers@0.7.13/dist/modules-esm/libsodium-wrappers.mjs';
     window.sodium = sodium;
     window.initApp();
   </script>
