--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
   </div>
   <script type="module">
-    import sodium from 'https://cdn.jsdelivr.net/npm/libsodium-wrappers@0.7.16/dist/modules-esm/libsodium-wrappers.mjs';
+    import sodium from 'https://esm.sh/libsodium-wrappers@0.7.16';
     window.sodium = sodium;
     window.initApp();
   </script>
