--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       }
     }
     window.initApp = async function() {
-      await ready();
+      // sodium is loaded as module, ready() is called after import
     };
     function setStatus(msg, cls="") {
       const el = $("status");
